modify cover page

--- a/latex_source/frontespizio.tex
+++ b/latex_source/frontespizio.tex
@@ -5,8 +5,8 @@
   \large
   POLITECNICO DI MILANO\\
   \normalsize
-  Corso di Laurea \textbf{(MAGISTRALE ?)} in Ingegneria Informatica\\
-  Dipartimento di Elettronica e Informazione\\
+  Scuola di Ingegneria Industriale e dell'Informazione\\
+  Corso di Laurea \textbf{MAGISTRALE} in Ingegneria Informatica\\
   \begin{figure}[htbp]
     \begin{center}
       \includegraphics[width=3.5cm]{./pictures/logopm}
@@ -17,29 +17,26 @@
 
 
 
-  \textbf{TITOLO DELLA TESI}\\
+  \textbf{Misuratore ottico di distanza tramite FPGA}\\
 
 
 
   \vspace*{.75truecm} \large
-  AI \& R Lab \\
-  Laboratorio di Intelligenza Artificiale \\
-  e Robotica del Politecnico di Milano
 \end{center}
 \vspace*{3.0cm} \large
 \begin{flushleft}
 
 
-  Relatore: Ing. Matteo Matteucci \\
-  Correlatore: Prof. Andrea Bonarini 
+  Relatore: Prof. Michele Norgia \\
+  Correlatore: 
 
 \end{flushleft}
 \vspace*{1.0cm}
 \begin{flushright}
 
 
-  Tesi di Laurea di:\\ Bud Spencer, matricola 634845 \\ 
-		       Terence Hill, matricola 641067 \\
+  Tesi di Laurea Magistrale di:\\ Leonardo Cavagnis, matricola 816646 \\ 
+		       Diego Rondelli, matricola XXXXXX \\
 
 
 \end{flushright}
@@ -48,6 +45,6 @@
 
 
 
-  Anno Accademico 200N-200N+1
+  Anno Accademico 2014-2015
 \end{center} \clearpage
 }
