--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -31,6 +31,9 @@
 \thispagestyle{empty}  \cleardoublepage
 \pagenumbering{Roman}
 \include{sommario}
+\thispagestyle{empty}  \cleardoublepage
+\pagenumbering{Roman}
+\include{abstract}
 \thispagestyle{empty} \vspace*{.75truecm} \cleardoublepage
 \include{ringraziamenti}
 \thispagestyle{empty} \vspace*{.75truecm} \normalfont \cleardoublepage
