fix document structure

--- a/latex_source/capitolo4.tex
+++ b/latex_source/capitolo4.tex
@@ -1,16 +1,16 @@
-\chapter{Progetto logico della soluzione del problema}
+\chapter{Architettura del sistema}
 \label{capitolo4}
 \thispagestyle{empty}
 
 \begin{quotation}
 {\footnotesize
-\noindent \emph{``Bud: No, calma, calma, stiamo calmi, noi siamo su un'isola deserta, e per il momento non t'ammazzo perch\'e mi potresti servire come cibo ...''}
+\noindent \emph{``Terence: Ma scusa di che ti preoccupi, i piedipiatti hanno altro a cui pensare, in questo momento stanno cercando due cadaveri scomparsi \\
+Bud: Se non spegni quella sirena uno di quei due cadaveri scomparsi lo trovano di sicuro!''}
 \begin{flushright}
-Chi trova un amico trova un tesoro
+Nati con la camicia
 \end{flushright}
 }
 \end{quotation}
 \vspace{0.5cm}
 
-\noindent In questa sezione si spiega come \`e stato affrontato il problema concettualmente, la soluzione logica che ne \`e seguita senza la documentazione.
-
+\noindent Si mostra il progetto dell'architettura del sistema con i vari moduli.
