--- a/latex_source/capitolo1.tex
+++ b/latex_source/capitolo1.tex
@@ -1,53 +1,18 @@
-\chapter{Introduzione}
-\label{Introduzione}
+\chapter{Stato dell'arte}
+\label{capitolo1}
 \thispagestyle{empty}
 
 \begin{quotation}
 {\footnotesize
-\noindent{\emph{``Terence: Rotta a nord con circospezione \\
-Bud: Ehi, gli ordini li do io qui!\\
-Terence: Ok, comante\\
-Bud: Rotta a nord\\
-Terence: Soltanto?\\
-Bud: Con circospezione!''}
-}
+\noindent{\emph{``Terence: Tu lo reggi il whisky? \\
+Bud: Beh, i primi due galloni si, al terzo divento nostalgico e ci pu\`o scappare la lite... E tu lo reggi? \\
+Terence: Eh, che domande, io sono stato allattato a whisky!''
+} }
 \begin{flushright}
-Chi Trova un Amico Trova un Tesoro
+I due superpiedi quasi piatti
 \end{flushright}
 }
 \end{quotation}
 \vspace{0.5cm}
 
-\noindent L'introduzione deve essere atomica, quindi non deve contenere n\`e sottosezioni n\`e paragrafi n\`e altro. Il titolo, il sommario e l'introduzione devono sembrare delle scatole cinesi, nel senso che lette in quest'ordine devono progressivamente svelare informazioni sul contenuto per incatenare l'attenzione del lettore e indurlo a leggere l'opera fino in fondo. L'introduzione deve essere tripartita, non graficamente ma logicamente:
-
-\section{Inquadramento generale}
-La prima parte contiene una frase che spiega l'area generale dove si svolge il lavoro; una che spiega la sottoarea pi\`u specifica dove si svolge il lavoro e la terza, che dovrebbe cominciare con le seguenti parole ``lo scopo della tesi \`e \dots'', illustra l'obbiettivo del lavoro. Poi vi devono essere una o due frasi che contengano una breve spiegazione di cosa e come \`e stato fatto, delle attivit\`a  sperimentali, dei risultati ottenuti con una valutazione e degli sviluppi futuri. La prima parte deve essere circa una facciata e mezza o due
-
-\section{Breve descrizione del lavoro}
-La seconda parte deve essere una esplosione della prima e deve quindi mostrare in maniera pi\`u esplicita l'area dove si svolge il lavoro, le fonti bibliografiche pi\`u importanti su cui si fonda il lavoro in maniera sintetica (una pagina) evidenziando i lavori in letteratura che presentano attinenza con il lavoro affrontato in modo da mostrare da dove e perch\'e \`e sorta la tematica di studio. Poi si mostrano esplicitamente le realizzazioni, le direttive future di ricerca, quali sono i problemi aperti e quali quelli affrontati e si ripete lo scopo della tesi. Questa parte deve essere piena (ma non grondante come la sezione due) di citazioni bibliografiche e deve essere lunga circa 4 facciate.
-
-\section{Struttura della tesi}
-La terza parte contiene la descrizione della struttura della tesi ed \`e organizzata nel modo seguente.
-``La tesi \`e strutturata nel modo seguente.
-
-Nella sezione due si mostra \dots
-
-Nella sez. tre si illustra \dots
-
-Nella sez. quattro si descrive \dots
-
-Nelle conclusioni si riassumono gli scopi, le valutazioni di questi e le prospettive future \dots
-
-Nell'appendice A si riporta \dots (Dopo ogni sezione o appendice ci vuole un punto).''
-
-I titoli delle sezioni da 2 a M-1 sono indicativi, ma bisogna cercare di mantenere un significato equipollente nel caso si vogliano cambiare. Queste sezioni possono contenere eventuali sottosezioni.
-
-%``Terence: "Mi fai un gelato anche a me? Lo vorrei di pistacchio" \\
-%Bud: "Non ce l'ho il pistacchio. C'ho la vaniglia, cioccolato, fragola, limone e caffé"\\
-%Terence: "Ah bene. Allora fammi un cono di vaniglia e di pistacchio"\\
-%Bud: "No, non ce l'ho il pistacchio. C'ho la vaniglia, cioccolato, fragola, limone e caffé"\\
-%Terence: "Ah, va bene. Allora vediamo un po', fammelo al cioccolato, tutto coperto di pistacchio"\\
-%Bud: "Ehi, macché sei sordo? Ti ho detto che il pistacchio non ce l'ho!"\\
-%Terence: "Ok ok, non c'è bisogno che t'arrabbi, no? Insomma, di che ce l'hai?"\\
-%Bud: "Ce l'ho di vaniglia, cioccolato, fragola, limone e caffé!"\\
-%Terence: "Ah, ho capito. Allora fammene uno misto: mettici la fragola, il cioccolato, la vaniglia, il limone e il caffé. Charlie, mi raccomando il pistacchio, eh"''}
+\noindent Nella seconda sezione si riporta lo stato dell'arte del settore, un inquadramento dell'area di ricerca orientato a portare il lettore all'interno della problematica affrontata. Bisogna dimostrare di conoscere le cose fatte fino ad ora in questo campo e il perch\'e si sia reso necessario lo svolgimento di questo lavoro. Questa sezione deve essere grondante di citazioni bibliografiche~\cite{marco02bud}.
