--- a/latex_source/capitolo2.tex
+++ b/latex_source/capitolo2.tex
@@ -1,18 +1,17 @@
-\chapter{Stato dell'arte}
+\chapter{Impostazione del problema di ricerca}
 \label{capitolo2}
 \thispagestyle{empty}
 
 \begin{quotation}
 {\footnotesize
-\noindent{\emph{``Terence: Tu lo reggi il whisky? \\
-Bud: Beh, i primi due galloni si, al terzo divento nostalgico e ci pu\`o scappare la lite... E tu lo reggi? \\
-Terence: Eh, che domande, io sono stato allattato a whisky!''
-} }
+\noindent{\emph{``Bud: Apri!\\
+Cattivo: Perché, altrimenti vi arrabbiate?\\
+Bud e Terence: Siamo già arrabbiati!''}}
 \begin{flushright}
-I due superpiedi quasi piatti
+Altrimenti ci arrabbiamo
 \end{flushright}
 }
 \end{quotation}
 \vspace{0.5cm}
 
-\noindent Nella seconda sezione si riporta lo stato dell'arte del settore, un inquadramento dell'area di ricerca orientato a portare il lettore all'interno della problematica affrontata. Bisogna dimostrare di conoscere le cose fatte fino ad ora in questo campo e il perch\'e si sia reso necessario lo svolgimento di questo lavoro. Questa sezione deve essere grondante di citazioni bibliografiche~\cite{marco02bud}.
+\noindent In questa sezione si deve descrivere l'obiettivo della ricerca, le problematiche affrontate ed eventuali definizioni preliminari nel caso la tesi sia di carattere teorico.
