--- a/latex_source/capitolo3.tex
+++ b/latex_source/capitolo3.tex
@@ -1,17 +1,16 @@
-\chapter{Impostazione del problema di ricerca}
+\chapter{Progetto logico della soluzione del problema}
 \label{capitolo3}
 \thispagestyle{empty}
 
 \begin{quotation}
 {\footnotesize
-\noindent{\emph{``Bud: Apri!\\
-Cattivo: Perché, altrimenti vi arrabbiate?\\
-Bud e Terence: Siamo già arrabbiati!''}}
+\noindent \emph{``Bud: No, calma, calma, stiamo calmi, noi siamo su un'isola deserta, e per il momento non t'ammazzo perch\'e mi potresti servire come cibo ...''}
 \begin{flushright}
-Altrimenti ci arrabbiamo
+Chi trova un amico trova un tesoro
 \end{flushright}
 }
 \end{quotation}
 \vspace{0.5cm}
 
-\noindent In questa sezione si deve descrivere l'obiettivo della ricerca, le problematiche affrontate ed eventuali definizioni preliminari nel caso la tesi sia di carattere teorico.
+\noindent In questa sezione si spiega come \`e stato affrontato il problema concettualmente, la soluzione logica che ne \`e seguita senza la documentazione.
+
