--- a/latex_source/capitolo5.tex
+++ b/latex_source/capitolo5.tex
@@ -1,16 +1,18 @@
-\chapter{Architettura del sistema}
-\label{capitolo5}
+\chapter{Realizzazioni sperimentali e valutazione}
+\label{conclusioni}
 \thispagestyle{empty}
 
 \begin{quotation}
 {\footnotesize
-\noindent \emph{``Terence: Ma scusa di che ti preoccupi, i piedipiatti hanno altro a cui pensare, in questo momento stanno cercando due cadaveri scomparsi \\
-Bud: Se non spegni quella sirena uno di quei due cadaveri scomparsi lo trovano di sicuro!''}
+\noindent\emph{``Bambino: Questo è l'ultimo avviso per voi e i vostri rubagalline \\
+Il pistolero si alza: Che avete detto? \\
+Bambino: RUBAGALLINE \\
+Il pistolero si risiede: Aaah.''}
 \begin{flushright}
-Nati con la camicia
+Lo chiamavano Trinit\`a \dots
 \end{flushright}
 }
 \end{quotation}
 \vspace{0.5cm}
 
-\noindent Si mostra il progetto dell'architettura del sistema con i vari moduli.
+\noindent Si mostra il progetto dal punto di vista sperimentale, le cose materialmente realizzate. In questa sezione si mostrano le attivit\`a sperimentali svolte, si illustra il funzionamento del sistema (a grandi linee) e si spiegano i risultati ottenuti con la loro valutazione critica. Bisogna introdurre dati sulla complessit\`a degli algoritmi e valutare l'efficienza del sistema.
