--- a/latex_source/conclusioni.tex
+++ b/latex_source/conclusioni.tex
@@ -1,5 +1,5 @@
-\chapter{Direzioni future di ricerca e conclusioni}
-\label{capitolo7}
+\chapter*{Direzioni future di ricerca e conclusioni}
+\label{conclusioni}
 \thispagestyle{empty}
 
 \begin{quotation}
@@ -9,8 +9,8 @@ Bud: Non ce l'ho il pistacchio. C'ho la vaniglia, cioccolato, fragola, limone e 
 Terence: Ah bene. Allora fammi un cono di vaniglia e di pistacchio. \\
 Bud: No, non ce l'ho il pistacchio. C'ho la vaniglia, cioccolato, fragola, limone e caff\'e. \\
 Terence: Ah, va bene. Allora vediamo un po', fammelo al cioccolato, tutto coperto di pistacchio. \\
-Bud: Ehi, macché sei sordo? Ti ho detto che il pistacchio non ce l'ho! \\
-Terence: Ok ok, non c'è bisogno che t'arrabbi, no? Insomma, di che ce l'hai? \\
+Bud: Ehi, macchÃ© sei sordo? Ti ho detto che il pistacchio non ce l'ho! \\
+Terence: Ok ok, non c'Ã¨ bisogno che t'arrabbi, no? Insomma, di che ce l'hai? \\
 Bud: Ce l'ho di vaniglia, cioccolato, fragola, limone e caff\'e! \\
 Terence: Ah, ho capito. Allora fammene uno misto: mettici la fragola, il cioccolato, la vaniglia, il limone e il caff\'e. Charlie, mi raccomando il pistacchio, eh.''}
 \begin{flushright}
