--- a/latex_source/frontespizio.tex
+++ b/latex_source/frontespizio.tex
@@ -36,7 +36,7 @@
 
 
   Tesi di Laurea Magistrale di:\\ Leonardo Cavagnis, matricola 816646 \\ 
-		       Diego Rondelli, matricola XXXXXX \\
+		       Diego Rondelli, matricola 817108 \\
 
 
 \end{flushright}
