--- a/latex_source/capitolo3.tex
+++ b/latex_source/capitolo3.tex
@@ -1,16 +1,6 @@
-\chapter{Progetto logico della soluzione del problema}
+\chapter{Architettura Hardware dello strumento}
 \label{capitolo3}
 \thispagestyle{empty}
 
-\begin{quotation}
-{\footnotesize
-\noindent \emph{``Bud: No, calma, calma, stiamo calmi, noi siamo su un'isola deserta, e per il momento non t'ammazzo perch\'e mi potresti servire come cibo ...''}
-\begin{flushright}
-Chi trova un amico trova un tesoro
-\end{flushright}
-}
-\end{quotation}
-\vspace{0.5cm}
-
-\noindent In questa sezione si spiega come \`e stato affrontato il problema concettualmente, la soluzione logica che ne \`e seguita senza la documentazione.
+\noindent ToDO
 
