--- a/latex_source/frontespizio.tex
+++ b/latex_source/frontespizio.tex
@@ -17,7 +17,7 @@
 
 
 
-  \textbf{Misuratore ottico di distanza 	\\tramite FPGA}\\
+  \textbf{Sviluppo firmware per misuratore laser di distanza basato su FPGA}\\
 
 
 
@@ -27,8 +27,7 @@
 \begin{flushleft}
 
 
-  Relatore: Prof. Michele Norgia \\
-  Correlatore: 
+  Relatore: Prof. Michele Norgia
 
 \end{flushleft}
 \vspace*{1.0cm}
