Add sommario and abstract

--- a/latex_source/sommario.tex
+++ b/latex_source/sommario.tex
@@ -2,5 +2,8 @@
 \chapter*{Sommario}
 
 \addcontentsline{toc}{chapter}{Sommario}
+Lo scopo di questo lavoro di tesi \'e sviluppare il firmware di un misuratore laser basato sulla tecnica di interferometria a retroiniezione per misurare la distanza assoluta di un bersaglio.
 
-ToDO
+La prima parte del lavoro consiste nell'implementazione del firmware, sviluppato usando NI LabVIEW FPGA e Real-Time, e degli algoritmi necessari per la misura della distanza assoluta.
+
+Nella seconda perte ci si \'e concentrati sull'ottimizzazione degli algoritmi implementati e sulla calibrazione dei parametri di funzionamento del sistema, al fine di migliorare la precisione e l'accuratezza della misura.
