--- a/latex_source/abstract.tex
+++ b/latex_source/abstract.tex
@@ -3,4 +3,8 @@
 
 \addcontentsline{toc}{chapter}{Abstract}
 
-ToDO
+The aim of this project is to develop the firmware of a laser sensor based on the self-mixing interferometer technique to measure the absolute distance from a target.
+
+The first part of the work consists in the implementation of the firmware, developed using NI LabVIEW FPGA and Real-Time, and the algorithms required for the absolute distance measurement.
+
+The second part is focused on the optimization of the implemented algorithms and the calibration of the working parameters of the system, in order to improve the precision and the accuracy of the measurement.
