--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -1,13 +1,26 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
+
+%% Created for Leonardo Cavagnis at 2015-11-10 23:13:39 +0100 
+
+
 %% Saved with string encoding Unicode (UTF-8) 
 
-%% Prova
-@book{foo,
-	Date-Added = {2015-10-13 19:13:36 +0000},
-	Date-Modified = {2015-10-13 19:14:02 +0000},
-	Publisher = {Publisher},
-	Read = {0},
-	Title = {Title},
-	Year = {2015}}
+
+
+@article{341714,
+	Author = {Donati, S. and Giuliani, G. and Merlo, S.},
+	Date-Added = {2015-11-10 22:12:13 +0000},
+	Date-Modified = {2015-11-10 22:12:13 +0000},
+	Doi = {10.1109/3.341714},
+	Issn = {0018-9197},
+	Journal = {Quantum Electronics, IEEE Journal of},
+	Keywords = {III-V semiconductors;aluminium compounds;amplitude modulation;displacement measurement;gallium arsenide;hysteresis;image resolution;laser feedback;light interferometry;measurement by laser beam;optical modulation;optical resolving power;semiconductor lasers;1.2 m;GaAlAs;GaAlAs laser diode;amplitude modulated signal;arbitrary form;backreflection;diffusive;displacement measurement;interferometric resolution;laser diode feedback interferometer;reflective;sign ambiguity;single interferometric channel;single interferometric signal;surface;two-level hysteresis;Amplitude modulation;Diode lasers;Displacement measurement;Frequency;Laser feedback;Laser modes;Laser theory;Power lasers;Surface emitting lasers;Vibration measurement},
+	Month = {Jan},
+	Number = {1},
+	Pages = {113-119},
+	Title = {Laser diode feedback interferometer for measurement of displacements without ambiguity},
+	Volume = {31},
+	Year = {1995},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1109/3.341714}}
