--- a/latex_source/conclusioni.tex
+++ b/latex_source/conclusioni.tex
@@ -3,4 +3,4 @@
 \thispagestyle{empty}
 \addcontentsline{toc}{chapter}{Conclusioni e sviluppi futuri}
 
-\noindent ToDO
+\noindent %%TODO Conclusioni
