--- a/latex_source/introduzione.tex
+++ b/latex_source/introduzione.tex
@@ -3,4 +3,21 @@
 \thispagestyle{empty}
 \addcontentsline{toc}{chapter}{Introduzione}
 
-\noindent 
+Il lavoro di tesi qui presentato trae origine dall'esperienza svolta presso il "Laboratorio di Misure Ottiche ed Elettroniche - MOLES" del Dipartimento di Elettronica Informazione e Bioingegneria del Politecnico di Milano, nell'ambito dello studio e del progetto di un sistema di misura laser di distanza mediante tecnica interferometrica a retroiniezione. Lo strumento in questione deriva dalle conoscenze acquisite con un'attivit\'a di ricerca che si sviluppa da diversi anni~\cite{341714}.
+
+Grazie alla scarsa invasivit\'a delle sorgenti laser e alla loro elevata adattabilit\'a ai vari ambienti di lavoro, il loro utilizzo \'e richiesto in numerose applicazioni, che spaziano dagli ambiti biomedicali alle telecomunicazioni, fino ad arrivare alla pura sensoristica. Sebbene nel mercato ci siano diverse tipologie di misuratori di distanza ottici, sfruttati grazie alla loro capacit\'a di misurazione senza perturbazioni o interventi meccanici, la tecnica interferometrica a retroiniezione consente caratteristiche e prestazioni differenti. \'E una tecnica recente che permette di effettuare una misura di distanza assoluta utilizzando solamente un laser, un fotodiodo e una lente. Il costo dei componenti \'e esiguo grazie alle tecnologie elettroniche analogiche e digitali moderne e alla semplicit\'a del sistema ottico.
+
+L'obiettivo di questa tesi \'e lo sviluppo di una versione dello strumento che si prefigge di raggiungere il massimo delle prestazioni ottenibili e di raffinare altri aspetti come affidabilit\'a, qualit\'a hardware e software. In quanto note a priori le problematiche da affrontare e le specifiche che ogni componente avrebbe dovuto soddisfare, \'e stato possibile svolgere il lavoro in maniera ordinata e precisa.
+
+L'attivit\'a \'e stata ripartita con un altro laureando, Samuele Disegna, che si \'e occupato della parte elettronica e ottica dello strumento, mentre questo lavoro tratta la parte software.
+
+\noindent Gli argomenti sviluppati sono organizzati in 5 capitoli principali.
+
+Nel \textbf{Capitolo 1} \'e presente una descrizione delle caratteristiche fisiche e ottiche delle sorgenti laser. Nel \textbf{Capitolo 2} sono descritti i principi base dell'interferometria, con particolare attenzione a quella utilizzata, la retroiniezione. Nei \textbf{Capitoli 3} e \textbf{4} sono descritte l'architettura hardware e software dello strumento. Nel \textbf{Capitolo 5}, infine, sono illustrate le prove sperimentali.
+\\
+\\
+Milano, Dicembre 2015
+\begin{flushright}
+\textit{Leonardo Cavagnis}\\
+\textit{Diego Rondelli}
+\end{flushright}
