cap 1 fino a laser a semiconduttore

--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -2,12 +2,29 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Leonardo Cavagnis at 2015-11-10 23:13:39 +0100 
+%% Created for Leonardo Cavagnis at 2015-11-11 11:52:44 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{kasap2012optoelectronics,
+	Author = {Kasap, Safa O},
+	Date-Added = {2015-11-11 10:51:02 +0000},
+	Date-Modified = {2015-11-11 10:52:44 +0000},
+	Publisher = {Pearson Higher Ed},
+	Title = {Optoelectronics and Photonics: Principles and Practices},
+	Year = {2012}}
+
+@book{sveltolaser,
+	Author = {O. Svelto},
+	Date-Added = {2015-11-11 10:00:02 +0000},
+	Date-Modified = {2015-11-11 10:02:27 +0000},
+	Edition = {Fourth},
+	Publisher = {Plenum Press},
+	Title = {Principles of Lasers},
+	Year = {1998}}
 
 @article{341714,
 	Author = {Donati, S. and Giuliani, G. and Merlo, S.},
