--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt,a4paper,twoside,openright]{report}
 
-\usepackage[dvips]{graphicx}
+\usepackage{graphicx}
+\graphicspath{{./pictures/}}
 \usepackage{tabularx}
 \usepackage{subfigure}
 \usepackage{afterpage}
@@ -8,6 +9,8 @@
 \usepackage{rotating}  
 \usepackage{fancyhdr}  
 \usepackage[scriptsize]{caption} 
+\usepackage{siunitx}
+\DeclareSIUnit{\EUR}{\text{\euro}}
 \hyphenation{a-gen-tiz-za-zio-ne}
 
 \setlength{\paperwidth}{16cm}
@@ -19,7 +22,8 @@
 \linespread{1.1}
 
 \usepackage[italian]{babel}
-\usepackage[latin1]{inputenc}
+\usepackage[T1]{fontenc} 
+\usepackage[utf8]{inputenc}
 \renewcommand{\captionfont}{\normalfont \sffamily \itshape \small}
 
 \pagestyle{empty}
